Fixed bg alignment and button size on mobile

--- a/src/sass/_preload.scss
+++ b/src/sass/_preload.scss
@@ -16,7 +16,7 @@
         transform: translate(-50%, -50%);
         color: antiquewhite;
         font-weight: bold;
-        font-size: 2rem;
-        padding: 1rem 2rem;
+        font-size: 1.5rem;
+        padding: 0.7rem 1rem;
     }
 }
