--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -19,11 +19,12 @@ html, body, img {
 
 #input {
     opacity: 0;
+    position: absolute;
 }
 
 img {
     width: 100%;
-    height: 100%;
+    height: auto;
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
